syntax = "proto3";

option go_package = "github.com/ukama/ukama/systems/common/pb/gen/events";


// added a new network
message NetworkCreatedEvent {
    string id = 1;
    string name = 2;
    string orgId = 3;
    repeated string allowedCountries = 4;
    repeated string allowedNetworks = 5;
    bool isDeactivated = 6;
    bool paymentLinks = 7;
}
